@startuml

title __GAME's Class Diagram__\n

  namespace Game {
    class Game.Game {
        - UI_thread : Thread
        - game_thread : Thread
        - isRunning : boolean
        - music_thread : Thread
        {static} + main()
        + run()
        ~ Game()
        - render()
        - start()
        - stop()
        - tick()
    }
  }
  

  namespace Game {
    class Game.Window {
        - height : int
        - width : int
        + getHeight()
        + getWidth()
        ~ Window()
    }
  }
  

  Game.Game .up.|> java.lang.Runnable
  Game.Game -up-|> java.awt.Canvas
  Game.Game o-- Handler.Handler : handler
  Game.Game o-- Input.KeyInput : keyInput
  Game.Game o-- SpriteSheet.MapSheet : map_sheet
  Game.Game o-- Game.Window : win


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
